name:                bigword
version:             0.1.0.0
synopsis:            Fixed-size bit vectors using type-level naturals
-- description:         
homepage:            https://github.com/nickspinale/bigword.git
license:             MIT
license-file:        LICENSE
author:              Nick Spinale
maintainer:          spinalen@carleton.edu
-- copyright:           
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.BigWord
  -- other-modules:       
  other-extensions:    DataKinds, KindSignatures
  build-depends:       base >=4.8 && <4.9
  -- hs-source-dirs:      
  default-language:    Haskell2010
