name:                mod-n
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Nick Spinale
maintainer:          spinalen@carleton.edu
-- copyright:           
category:            Numeric
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Numeric.Mod
  -- other-modules:       
  other-extensions:      DataKinds
                       , DeriveDataTypeable
                       , GeneralizedNewtypeDeriving
                       , KindSignatures
                       , MagicHash
                       , ScopedTypeVariables
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
